examples/misc/error/compilation/eval_match_let-expr.bfr
let _ =
  let a :: b = () in
  a

let main = []